--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400&display=swap');
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    line-height: 1.6;
+}
+body{
+    background-color: #282a36;
+    color: #f8f8f2;
+    font-family: Roboto, sans-serif;
+}
 h1{
-    color: navy;
+    font-family: 'Press Start 2P', sans-serif;
+    font-weight: 700;
+    font-size: 42px;
+    color: #ff79c6;
+    text-align: center;
+    padding: 1em auto;
+}
+img{
+    width: 150px;
+    height: auto;
 }
